[project]
name = "file-picker"
version = "0.2.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sato1214syun", email = "sato1214syun@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
